[gd_scene load_steps=20 format=2]

[ext_resource path="res://Main Menu/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Main Menu/Settings.gd" type="Script" id=2]
[ext_resource path="res://Main Menu/ConfirmationDialog.gd" type="Script" id=3]
[ext_resource path="res://Main Menu/VolumeSlider.gd" type="Script" id=4]
[ext_resource path="res://Sound/explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://Music/main_bgmusic1.ogg" type="AudioStream" id=6]
[ext_resource path="res://IMPACT.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://UITheme.tres" type="Theme" id=8]
[ext_resource path="res://Main Menu/dbgLevelSelect.gd" type="Script" id=9]
[ext_resource path="res://Main Menu/Stats.gd" type="Script" id=10]
[ext_resource path="res://Textures/UI/title_screen_background.png" type="Texture" id=11]
[ext_resource path="res://Main Menu/BindUse.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=9]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=10]
resource_name = "Expand"
length = 0.5
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("Panel:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 55, -0.25, 0, 0.25, 0, -585, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Panel:rect_size:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 640, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Panel:rect_size:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 458, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Panel:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 55, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 22, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Panel:rect_size:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Panel:rect_size:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[sub_resource type="Theme" id=7]
TabContainer/colors/font_color_bg = Color( 0, 0, 0, 1 )
TabContainer/colors/font_color_fg = Color( 1, 1, 1, 1 )
TabContainer/constants/hseparation = 45
TabContainer/styles/panel = SubResource( 8 )
TabContainer/styles/tab_bg = SubResource( 5 )
TabContainer/styles/tab_fg = SubResource( 6 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 1 )

[node name="Title Screen Layer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="Title Screen Layer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true

[node name="Title Screen" type="Control" parent="Title Screen Layer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )

[node name="Title" type="Label" parent="Title Screen Layer/Title Screen"]
modulate = Color( 0, 1, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_right = 320.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 9 )
text = "How To Rob A Gas Station 2"
align = 1
valign = 1

[node name="DemoString" type="Label" parent="Title Screen Layer/Title Screen"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 184.0
margin_top = 64.0
margin_right = 304.0
margin_bottom = 141.0
rect_rotation = -30.0
custom_fonts/font = SubResource( 9 )
text = "Demo"
align = 1
valign = 1

[node name="VersionString" type="Label" parent="Title Screen Layer/Title Screen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 296.0
margin_top = 464.0
margin_right = 316.0
margin_bottom = 478.0
text = "1.2"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Title Screen Layer/Title Screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -240.0
margin_right = 75.0
margin_bottom = 240.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 20
alignment = 1

[node name="Start" type="Button" parent="Title Screen Layer/Title Screen/VBoxContainer"]
margin_top = 166.0
margin_right = 150.0
margin_bottom = 188.0
focus_neighbour_bottom = NodePath("../Settings")
focus_mode = 0
theme = ExtResource( 8 )
enabled_focus_mode = 0
text = "Start Game"

[node name="Settings" type="Button" parent="Title Screen Layer/Title Screen/VBoxContainer"]
margin_top = 208.0
margin_right = 150.0
margin_bottom = 230.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Quit")
focus_mode = 0
theme = ExtResource( 8 )
enabled_focus_mode = 0
text = "Settings"

[node name="Credits" type="Button" parent="Title Screen Layer/Title Screen/VBoxContainer"]
margin_top = 250.0
margin_right = 150.0
margin_bottom = 272.0
focus_mode = 0
enabled_focus_mode = 0
text = "Credits"

[node name="Quit" type="Button" parent="Title Screen Layer/Title Screen/VBoxContainer"]
margin_top = 292.0
margin_right = 150.0
margin_bottom = 314.0
focus_neighbour_top = NodePath("../Settings")
focus_mode = 0
theme = ExtResource( 8 )
enabled_focus_mode = 0
text = "Quit"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Title Screen Layer/Title Screen/VBoxContainer/Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -49.0
margin_right = 131.0
margin_bottom = 49.0
theme = ExtResource( 8 )
popup_exclusive = true
window_title = "Are you a quitter? Or a shitter?"
dialog_text = "Are you seriously quitting?"
dialog_hide_on_ok = false
dialog_autowrap = true
script = ExtResource( 3 )

[node name="dbgLevelSelect" type="Button" parent="Title Screen Layer/Title Screen"]
margin_left = 248.0
margin_top = 77.0
margin_right = 395.0
margin_bottom = 100.0
focus_mode = 0
enabled_focus_mode = 0
text = "Level Select"
script = ExtResource( 9 )

[node name="Stats" type="Button" parent="Title Screen Layer/Title Screen"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -55.0
margin_bottom = 22.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "Stats"
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="Title Screen Layer/Title Screen/Stats"]
anchor_left = -10.636
anchor_top = 1.091
anchor_right = 0.999999
anchor_bottom = 21.818
margin_left = 55.0
margin_top = 22.0
margin_right = 55.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Title Screen Layer/Title Screen/Stats/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="TotalCompleted" type="Label" parent="Title Screen Layer/Title Screen/Stats/Panel/VBoxContainer"]
margin_right = 1.0
margin_bottom = 14.0
text = "TotalCompleted"
align = 1
valign = 1
clip_text = true

[node name="TotalJumped" type="Label" parent="Title Screen Layer/Title Screen/Stats/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 1.0
margin_bottom = 32.0
text = "TotalJumped"
align = 1
valign = 1
clip_text = true

[node name="TotalNRG" type="Label" parent="Title Screen Layer/Title Screen/Stats/Panel/VBoxContainer"]
margin_top = 36.0
margin_right = 1.0
margin_bottom = 50.0
text = "TotalNRG"
align = 1
valign = 1
clip_text = true

[node name="TotalObject" type="Label" parent="Title Screen Layer/Title Screen/Stats/Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 1.0
margin_bottom = 68.0
text = "TotalObject"
align = 1
valign = 1
clip_text = true

[node name="TotalSpeak" type="Label" parent="Title Screen Layer/Title Screen/Stats/Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 1.0
margin_bottom = 86.0
text = "TotalSpeak"
align = 1
valign = 1
clip_text = true

[node name="TotalTime" type="Label" parent="Title Screen Layer/Title Screen/Stats/Panel/VBoxContainer"]
visible = false
margin_top = 90.0
margin_right = 1.0
margin_bottom = 104.0
text = "TotalTime"
align = 1
valign = 1
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title Screen Layer/Title Screen/Stats"]
anims/Expand = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="SettingsLayer" type="CanvasLayer" parent="."]

[node name="Settings" type="Control" parent="SettingsLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 2 )

[node name="Back" type="Button" parent="SettingsLayer/Settings"]
margin_top = 48.0
margin_right = 60.0
margin_bottom = 72.0
text = "Back"

[node name="Default" type="Button" parent="SettingsLayer/Settings"]
margin_left = -4.0
margin_top = 72.0
margin_right = 66.0
margin_bottom = 96.0
text = "Default"

[node name="TabContainer" type="TabContainer" parent="SettingsLayer/Settings"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme = SubResource( 7 )
tab_align = 0

[node name="Game" type="VBoxContainer" parent="SettingsLayer/Settings/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
alignment = 1

[node name="FOV" type="Label" parent="SettingsLayer/Settings/TabContainer/Game"]
margin_top = 100.0
margin_right = 512.0
margin_bottom = 114.0
text = "FOV:"
align = 1

[node name="FOVSlider" type="HSlider" parent="SettingsLayer/Settings/TabContainer/Game"]
margin_top = 118.0
margin_right = 512.0
margin_bottom = 134.0
focus_mode = 0
min_value = 50.0
max_value = 120.0
value = 70.0

[node name="MouseSensitivity" type="Label" parent="SettingsLayer/Settings/TabContainer/Game"]
margin_top = 138.0
margin_right = 512.0
margin_bottom = 152.0
text = "Mouse Sensitivity"
align = 1

[node name="SensitivitySlider" type="HSlider" parent="SettingsLayer/Settings/TabContainer/Game"]
margin_top = 156.0
margin_right = 512.0
margin_bottom = 172.0
focus_mode = 0
min_value = 0.1
max_value = 1.0
step = 0.05
value = 0.2

[node name="HeadBob" type="CheckBox" parent="SettingsLayer/Settings/TabContainer/Game"]
margin_top = 176.0
margin_right = 512.0
margin_bottom = 200.0
pressed = true
text = "Head Bobbing"
align = 1

[node name="SpeedrunMode" type="CheckBox" parent="SettingsLayer/Settings/TabContainer/Game"]
margin_top = 204.0
margin_right = 512.0
margin_bottom = 228.0
text = "Speedrun Mode"
align = 1

[node name="SkipTutorial" type="CheckBox" parent="SettingsLayer/Settings/TabContainer/Game"]
margin_top = 232.0
margin_right = 512.0
margin_bottom = 256.0
text = "Skip Tutorial"
align = 1

[node name="BindUse" type="Control" parent="SettingsLayer/Settings/TabContainer/Game"]
margin_top = 260.0
margin_right = 512.0
margin_bottom = 260.0
script = ExtResource( 12 )

[node name="Label" type="Label" parent="SettingsLayer/Settings/TabContainer/Game/BindUse"]
margin_top = 4.0
margin_right = 58.0
margin_bottom = 18.0
text = "Interact: "

[node name="BindInteract" type="OptionButton" parent="SettingsLayer/Settings/TabContainer/Game/BindUse"]
margin_left = 58.0
margin_right = 96.0
margin_bottom = 22.0
text = "E"
items = [ "E", null, false, 0, null, "LMB", null, false, 1, null, "RMB", null, false, 2, null, "MMB", null, false, 3, null ]
selected = 0

[node name="Video" type="VBoxContainer" parent="SettingsLayer/Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
alignment = 1

[node name="Fullscreen" type="CheckBox" parent="SettingsLayer/Settings/TabContainer/Video"]
margin_top = 154.0
margin_right = 512.0
margin_bottom = 178.0
text = "Fullscreen"
align = 1

[node name="Vsync" type="CheckBox" parent="SettingsLayer/Settings/TabContainer/Video"]
margin_top = 182.0
margin_right = 512.0
margin_bottom = 206.0
text = "Vsync"
align = 1

[node name="Audio" type="VBoxContainer" parent="SettingsLayer/Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
alignment = 1

[node name="Label" type="Label" parent="SettingsLayer/Settings/TabContainer/Audio"]
margin_top = 125.0
margin_right = 512.0
margin_bottom = 139.0
text = "Master Volume"
align = 1

[node name="VolumeSlider" type="HSlider" parent="SettingsLayer/Settings/TabContainer/Audio"]
margin_top = 143.0
margin_right = 512.0
margin_bottom = 159.0
max_value = 1.0
step = 0.05
script = ExtResource( 4 )

[node name="Label2" type="Label" parent="SettingsLayer/Settings/TabContainer/Audio"]
margin_top = 163.0
margin_right = 512.0
margin_bottom = 177.0
text = "Music Volume"
align = 1

[node name="VolumeSlider2" type="HSlider" parent="SettingsLayer/Settings/TabContainer/Audio"]
margin_top = 181.0
margin_right = 512.0
margin_bottom = 197.0
max_value = 1.0
step = 0.05
script = ExtResource( 4 )
audio_bus_name = "Music"

[node name="Label3" type="Label" parent="SettingsLayer/Settings/TabContainer/Audio"]
margin_top = 201.0
margin_right = 512.0
margin_bottom = 215.0
text = "SFX Volume"
align = 1

[node name="VolumeSlider3" type="HSlider" parent="SettingsLayer/Settings/TabContainer/Audio"]
margin_top = 219.0
margin_right = 512.0
margin_bottom = 235.0
max_value = 1.0
step = 0.05
script = ExtResource( 4 )
audio_bus_name = "SFX"

[node name="SFXTest" type="AudioStreamPlayer" parent="SettingsLayer/Settings/TabContainer/Audio"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="Title Screen Layer/Title Screen/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Title Screen Layer/Title Screen/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Title Screen Layer/Title Screen/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Title Screen Layer/Title Screen/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="confirmed" from="Title Screen Layer/Title Screen/VBoxContainer/Quit/ConfirmationDialog" to="Title Screen Layer/Title Screen/VBoxContainer/Quit/ConfirmationDialog" method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="Title Screen Layer/Title Screen/dbgLevelSelect" to="Title Screen Layer/Title Screen/dbgLevelSelect" method="_on_dbgLevelSelect_pressed"]
[connection signal="toggled" from="Title Screen Layer/Title Screen/Stats" to="Title Screen Layer/Title Screen/Stats" method="_on_Stats_toggled"]
[connection signal="pressed" from="SettingsLayer/Settings/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="SettingsLayer/Settings/Default" to="SettingsLayer/Settings" method="_on_Default_pressed"]
[connection signal="value_changed" from="SettingsLayer/Settings/TabContainer/Game/FOVSlider" to="SettingsLayer/Settings" method="_on_FOVSlider_value_changed"]
[connection signal="value_changed" from="SettingsLayer/Settings/TabContainer/Game/SensitivitySlider" to="SettingsLayer/Settings" method="_on_SensitivitySlider_value_changed"]
[connection signal="toggled" from="SettingsLayer/Settings/TabContainer/Game/HeadBob" to="SettingsLayer/Settings" method="_on_HeadBob_toggled"]
[connection signal="toggled" from="SettingsLayer/Settings/TabContainer/Game/SpeedrunMode" to="SettingsLayer/Settings" method="_on_SpeedrunMode_toggled"]
[connection signal="toggled" from="SettingsLayer/Settings/TabContainer/Game/SkipTutorial" to="SettingsLayer/Settings" method="_on_SkipTutorial_toggled"]
[connection signal="item_selected" from="SettingsLayer/Settings/TabContainer/Game/BindUse/BindInteract" to="SettingsLayer/Settings/TabContainer/Game/BindUse" method="_on_BindInteract_item_selected"]
[connection signal="toggled" from="SettingsLayer/Settings/TabContainer/Video/Fullscreen" to="SettingsLayer/Settings" method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="SettingsLayer/Settings/TabContainer/Video/Vsync" to="SettingsLayer/Settings" method="_on_Vsync_toggled"]
[connection signal="mouse_exited" from="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider" to="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider" method="_on_VolumeSlider_mouse_exited"]
[connection signal="value_changed" from="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider" to="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider" method="_on_VolumeSlider_value_changed"]
[connection signal="mouse_exited" from="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider2" to="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider2" method="_on_VolumeSlider_mouse_exited"]
[connection signal="value_changed" from="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider2" to="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider2" method="_on_VolumeSlider_value_changed"]
[connection signal="mouse_exited" from="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider3" to="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider3" method="_on_VolumeSlider_mouse_exited"]
[connection signal="value_changed" from="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider3" to="SettingsLayer/Settings/TabContainer/Audio/VolumeSlider3" method="_on_VolumeSlider_value_changed"]
